--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,39 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Escriba un título"
+        android:id="@+id/et_titulo"/>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_generar"
+        android:text="GENERAR NOTICIA RANDOM"
+        />
+
+
+    <!-- swtich-->
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="GÉNERO"
+        android:layout_marginLeft="270dp"
+        android:paddingLeft="10dp"
+        android:checked="true"/>
+
+
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/lv_noticias"
 
         />
+
 
 
 
